--- a/CarFree Back/package.json
+++ b/CarFree Back/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/validator": "^13.7.9"
+    "@types/validator": "^13.7.9",
+    "typescript":"4.7.4"
   }
 }
