--- a/CarFree Back/package.json
+++ b/CarFree Back/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && tsc -b",
+    "start":"node ./dist/app.js",
     "devBuild":"tsc -b"
 
   },
