added if statement to the reponse onEdit

--- a/CarFree Front/package.json
+++ b/CarFree Front/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "devBuild":"tsc && vite build",
     "build": "npm i && tsc && vite build",
     "preview": "vite preview"
   },
